test/1.2/errors/T_EASSIGN_34.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device eassign;

/// COMPILE-ONLY

method init() {
    // allowed in DML 1.2, which is weird. Covered by ENVAL in 1.4.
    $dev = $dev;
}
